:zap: auth fixes

--- a/lang/en.json
+++ b/lang/en.json
@@ -30,6 +30,7 @@
      "DRAG_HERE": "Drag tasks here",
     "STATUS_UPDATED":" Status updated",
     "NO_TASKS": "'No tasks",
+    "TASK_MANAGER":"Task Manager for",
     "NO_DATA": "No data"
     
 
